Fix view on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,23 +1,19 @@
-@import "colors";
+@import 'colors';
 
 html {
-  overflow: hidden;
-  height: 100vh;
+	overflow: hidden;
+	height: 100vh;
 }
 
 body {
-  height: 100vh;
-  overflow: auto;
-  margin: 0;
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */
-  -khtml-user-select: none; /* Konqueror HTML */
-  -moz-user-select: none; /* Old versions of Firefox */
-  -ms-user-select: none; /* Internet Explorer/Edge */
-  user-select: none; /* Non-prefixed version, currently
-                                    supported by Chrome, Opera and Firefox */
+	position: fixed;
+	overflow: hidden;
+	height: 100vh;
+	width: 100vw;
+	margin: 0;
+	user-select: none;
 }
 
 *:focus {
-  outline: 0;
+	outline: 0;
 }
